added XSS, some tests still failing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,12 @@
     
     "extends": "eslint:recommended",
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": 6,
+        "ecmaFeatures": {
+            "jsx": true,
+            "experimentalObjectRestSpread": true
+        }
     },
     "rules": {
         "strict": ["error", "safe"],   
